--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "sass-loader": "^16.0.5",
         "style-loader": "^4.0.0",
         "webpack": "^5.100.2",
+        "webpack-bundle-analyzer": "^4.10.2",
         "webpack-cli": "^6.0.1",
         "webpack-dev-server": "^5.2.2"
     },
